# serializer version: 1
# name: test_options_flow_full
  FlowResultSnapshot({
    'context': mappingproxy({
    }),
    'data': dict({
      'devices': dict({
        '1299453': dict({
          'location_inside': 'Washington DC',
          'location_outside': 'Space',
          'name': 'Pet Door',
          'polling_speed': 120,
          'product_id': <ProductId.DUAL_SCAN_CONNECT: 6>,
        }),
        '269654': dict({
          'name': 'Feeder',
          'product_id': <ProductId.FEEDER_CONNECT: 4>,
        }),
      }),
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': None,
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
  })
# ---
# name: test_options_flow_full.1
  ConfigEntrySnapshot({
    'data': dict({
      'client_device_id': '123',
      'token': 'abc',
    }),
    'disabled_by': None,
    'discovery_keys': dict({
    }),
    'domain': 'surepetcare',
    'entry_id': <ANY>,
    'minor_version': 1,
    'options': dict({
      'devices': dict({
        '1299453': dict({
          'location_inside': 'Home',
          'location_outside': 'Away',
          'name': 'Pet Door',
          'product_id': <ProductId.DUAL_SCAN_CONNECT: 6>,
        }),
        '269654': dict({
          'name': 'Feeder',
          'product_id': <ProductId.FEEDER_CONNECT: 4>,
        }),
      }),
    }),
    'pref_disable_new_entities': False,
    'pref_disable_polling': False,
    'source': 'user',
    'subentries': list([
    ]),
    'title': 'Test SurePetCare entry',
    'unique_id': '12345',
    'version': 1,
  })
# ---
# name: test_reconfiguration_flow
  ConfigEntrySnapshot({
    'data': dict({
      'client_device_id': '123',
      'token': 'abc',
    }),
    'disabled_by': None,
    'discovery_keys': dict({
    }),
    'domain': 'surepetcare',
    'entry_id': <ANY>,
    'minor_version': 1,
    'options': dict({
      'devices': dict({
        '1299453': dict({
          'name': 'Katzenklappe',
          'product_id': 6,
        }),
        '269654': dict({
          'name': 'Maui matlåda (old) ',
          'product_id': 4,
        }),
        '295972': dict({
          'name': 'Hem-hub',
          'product_id': 1,
        }),
        '472721': dict({
          'name': 'Maui',
          'product_id': 0,
        }),
        '727608': dict({
          'name': 'Laundry Door',
          'product_id': 3,
        }),
      }),
    }),
    'pref_disable_new_entities': False,
    'pref_disable_polling': False,
    'source': 'user',
    'subentries': list([
    ]),
    'title': 'Test SurePetCare entry',
    'unique_id': '12345',
    'version': 1,
  })
# ---
# name: test_user_flow
  FlowResultSnapshot({
    'context': dict({
      'source': 'user',
    }),
    'data': dict({
      'client_device_id': 'mocked_device_id',
      'token': 'mocked_token',
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'surepetcare',
    'minor_version': 1,
    'options': dict({
      'devices': dict({
        '1299453': dict({
          'name': 'Katzenklappe',
          'product_id': 6,
        }),
        '269654': dict({
          'name': 'Maui matlåda (old) ',
          'product_id': 4,
        }),
        '295972': dict({
          'name': 'Hem-hub',
          'product_id': 1,
        }),
        '472721': dict({
          'name': 'Maui',
          'product_id': 0,
        }),
        '727608': dict({
          'name': 'Laundry Door',
          'product_id': 3,
        }),
      }),
    }),
    'result': ConfigEntrySnapshot({
      'data': dict({
        'client_device_id': 'mocked_device_id',
        'token': 'mocked_token',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'surepetcare',
      'entry_id': <ANY>,
      'minor_version': 1,
      'options': dict({
        'devices': dict({
          '1299453': dict({
            'name': 'Katzenklappe',
            'product_id': 6,
          }),
          '269654': dict({
            'name': 'Maui matlåda (old) ',
            'product_id': 4,
          }),
          '295972': dict({
            'name': 'Hem-hub',
            'product_id': 1,
          }),
          '472721': dict({
            'name': 'Maui',
            'product_id': 0,
          }),
          '727608': dict({
            'name': 'Laundry Door',
            'product_id': 3,
          }),
        }),
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'SurePetCare Devices',
      'unique_id': None,
      'version': 1,
    }),
    'subentries': tuple(
    ),
    'title': 'SurePetCare Devices',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
    'version': 1,
  })
# ---
